[package]
name = "plonky2_rsa"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
itertools = "0.14.0"
num = { version = "0.4.3", features = ["num-bigint"] }
num-bigint = "0.4.6"
plonky2 = "1.0.2"
plonky2_u32 = { git = "https://github.com/dgulotta/plonky2-u32.git" }
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.9.0"
